--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   <div class="iframe-container">
     <div class="loader" id="loader">Loading app...</div>
     <iframe 
-      src="https://script.google.com/macros/s/AKfycby2UGt8DgqrUWxf7xxRbvAbVBLx0OBXhIxole1piz_9wgVACpijr0PkASVnHuw906Lv/exec" 
-      title="JNCfy Web App"
+      src="https://script.google.com/macros/s/AKfycbzR1hIOw0pxquaGNODgL2Y4CoT06cW4ExgBsGL2-Ak/dev" 
+      title="Sistem Dokumentasi Anggaran"
       onload="document.getElementById('loader').style.display='none';"
       allowfullscreen>
     </iframe>
